fixed spacing, downloaded new section

--- a/styles/base.css
+++ b/styles/base.css
@@ -1,6 +1,8 @@
 html,
 body {
   max-width: 100vw;
+  margin: 0;
+  padding: 0;
   overflow-x: hidden;
   scrollbar-width: none;
 }
@@ -12,8 +14,6 @@ body {
 
 * {
   box-sizing: border-box;
-  padding: 0;
-  margin: 0;
 }
 
 a {
@@ -24,8 +24,8 @@ a {
 button {
   cursor: pointer;
   transition: filter 0.3s ease;
+}
 
-  &:hover {
-    filter: brightness(140%);
-  }
+button:hover {
+  filter: brightness(140%);
 }
